# silver-guacamole

./: .finalize-midnight-event  .gitignore  .restore-trigger  .source-restore-event  .source-restore-event-v2  .source-restore-event-v2-retry-1  AGENTS.md  CHANGELOG.md  CMakeLists.txt  Character.cpp  Character.h  Enemy.cpp  Enemy.h  LICENSE  PLAN.md  Player.cpp  Player.h  README.md  SoundEngine.cpp  SoundEngine.h  Stealth.cpp  Stealth.h  THIRD_PARTY_NOTICES.md  agents.MD  ai_definitions.h  asset-loader.js  build.bat  build.sh  calculator_widget.py  ci-verification.txt  common.h  compile.bat  config.ini  config.ini.bak  debug_main.cpp  entities.cpp  entities.h  error_log.txt  fraction_to_text.py  index.html  (+13 more)
.final-text/: chunk-000  chunk-001  chunk-002  chunk-003  chunk-004  chunk-005  chunk-006  chunk-007
.github/workflows/: bootstrap.yml  build-aaja-artifact.yml  chromium-diagnostic.yml  ci.yml  drive-probe.yml  fetch-licensed-audio.yml  finalize-midnight-on-close.yml  pages-release-gate.yml  pages.yml  pr-bootstrap.yml  pr-target-probe.yml  recover-source.yml  restore-production-source.yml  source-restore-pr-target.yml  source-restore-target-v2.yml  source-restore-trigger.yml  trusted-restore-push.yml
.recovery/: diagnostic-result.txt  patch-00  patch-01  patch-02  patch-03  patch-04  patch-05  patch-06  patch-07  patch-07-0  patch-07-1  patch-07-2  patch-07-3  patch-08  patch-09  patch-10  pr-target-probe.txt  pr5-write-probe.txt  source-restore-status.txt  trigger
bootstrap/: chunk-000  chunk-001  chunk-002  chunk-003  chunk-004  chunk-005  chunk-006  chunk-007  trigger-2.txt  trigger.txt
docs/: GAME_DESIGN.md  accessibility.md  architecture.md  audio-mix.md  audio-sources.md  manual-test-results.md
linux/: CMakeLists.txt
minimal_test_build/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  minimal_test  minimal_test.cpp
payload/: manifest.json
scripts/: build-audio.mjs  check-format.mjs  copy-release-wasm.mjs  lint.mjs  materialize-aaja.mjs  verify-audio.mjs  verify-release-engine.mjs  verify-repository.mjs
src/: Enemy.cpp  Enemy.h  Fists.cpp  Fists.h  Knife.cpp  Knife.h  Machete.cpp  Machete.h  Pistol.cpp  Pistol.h  Player.cpp  Player.h  Shocker.cpp  Shocker.h  SoundEngine.cpp  SoundEngine.h  Utils.h  Weapon.h  bootstrap.ts  main.cpp  main.ts
src/audio/: AajaAudioAdapter.ts  AnnouncementQueue.ts  AudioScene.ts  GameAudioController.ts
src/diagnostics/: Diagnostics.ts
src/entities/: CoreManager.ts  DroneController.ts  PlayerController.ts
src/game/: commands.ts  noise.ts  pathfinding.ts  rules.ts  types.ts  world.ts
src/input/: GestureInput.ts  InputHub.ts  KeyboardInput.ts  VoiceOverInput.ts
src/save/: SaveStore.ts
src/scenes/: GameScene.ts  GameSceneConstants.ts  GameSceneEvents.ts  GameSceneInteraction.ts  GameSceneRuntime.ts  GameSceneTesting.ts  GameSceneWorld.ts
src/testing/: TestBridge.ts
src/ui/: AppUI.ts  styles.css
src/world/: DoorSystem.ts  WorldMap.ts
tests/: CMakeLists.txt  contracts.test.mjs  pathfinding.test.mjs  rules.test.mjs  test_dynamic_reverb.cpp  test_enemy_movement.cpp  test_npc.cpp  test_npc_audio.cpp  test_player.cpp  test_reverb.cpp  test_spawning.cpp  test_stealth.cpp  test_sticking.cpp  test_utils.cpp  test_utils.h  test_weapon.cpp  world-map.test.mjs
tests/e2e/: fast-route.mjs  hazards.spec.mjs  helpers.mjs  playthrough.spec.mjs  smoke.spec.mjs
